# python-bootcamp

./: README.md  pyproject.toml
documents/: AssignmentBasic.md  AssignmentChapter1.md  AssignmentChapter2.md  AssignmentChapter3.md  AssignmentChapter4.md  GitClone.md
documents/git/: Day1.md  Day2.md  Day3.md  Day4.md
python_bootcamp_cloudorbit/basic/: basic.py
python_bootcamp_cloudorbit/chapter1/: mako_file_updator.py
python_bootcamp_cloudorbit/chapter2/: data_manager.py  phone_book.py
python_bootcamp_cloudorbit/chapter3/: floating_point_number.py
python_bootcamp_cloudorbit/chapter4/: get_latest_release.py
tests/basic/: test_basic.py
tests/chapter1/: __init__.py  test_chapter1.py
tests/chapter2/: __init__.py  test_chapter2.py
tests/chapter3/: __init__.py  test_chapter3.py
tests/chapter4/: __init__.py  test_chapter4.py
